--- a/src/main/resources/swiftsolutions/gui/template/GUI.fxml
+++ b/src/main/resources/swiftsolutions/gui/template/GUI.fxml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.chart.CategoryAxis?>
 <?import javafx.scene.chart.LineChart?>
 <?import javafx.scene.chart.NumberAxis?>
+<?import javafx.scene.chart.StackedBarChart?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -18,11 +20,11 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane id="container" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="swiftsolutions.gui.GUIController">
+<BorderPane id="container" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1200.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="swiftsolutions.gui.GUIController">
    <top>
       <VBox id="topbar" alignment="CENTER_LEFT" prefHeight="40.0" prefWidth="100.0" BorderPane.alignment="CENTER">
          <children>
-            <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0">
+            <HBox fx:id="topBar" alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0">
                <children>
                   <ImageView fitHeight="20.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -43,13 +45,6 @@
                   <HBox alignment="CENTER_RIGHT" maxWidth="1.7976931348623157E308" minHeight="-Infinity" prefHeight="40.0" prefWidth="1.20390123E8">
                      <children>
                         <Button fx:id="stop1" mnemonicParsing="false" styleClass="button-bar">
-                           <graphic>
-                              <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true">
-                                 <image>
-                                    <Image url="@cancel.png" />
-                                 </image>
-                              </ImageView>
-                           </graphic>
                            <HBox.margin>
                               <Insets right="10.0" />
                            </HBox.margin>
@@ -67,8 +62,8 @@
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         </columnConstraints>
         <rowConstraints>
-          <RowConstraints maxHeight="374.0" minHeight="10.0" prefHeight="341.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="602.0" minHeight="10.0" prefHeight="585.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="361.0" minHeight="10.0" prefHeight="155.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
             <GridPane>
@@ -85,8 +80,9 @@
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                     </columnConstraints>
                     <rowConstraints>
-                      <RowConstraints maxHeight="182.0" minHeight="10.0" prefHeight="122.0" vgrow="SOMETIMES" />
-                      <RowConstraints maxHeight="266.0" minHeight="10.0" prefHeight="252.0" vgrow="SOMETIMES" />
+                      <RowConstraints maxHeight="182.0" minHeight="10.0" prefHeight="130.0" vgrow="SOMETIMES" />
+                      <RowConstraints maxHeight="270.0" minHeight="10.0" prefHeight="234.0" vgrow="SOMETIMES" />
+                        <RowConstraints maxHeight="266.0" minHeight="10.0" prefHeight="223.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
                         <BorderPane prefHeight="200.0" prefWidth="200.0" styleClass="pane">
@@ -133,6 +129,18 @@
                                     </Text>
                                     <HBox alignment="TOP_RIGHT" prefHeight="67.0" prefWidth="269.0">
                                        <children>
+                                          <Button fx:id="write" mnemonicParsing="false">
+                                             <graphic>
+                                                <ImageView fitHeight="20.0" fitWidth="23.0" pickOnBounds="true">
+                                                   <image>
+                                                      <Image url="@contract.png" />
+                                                   </image>
+                                                </ImageView>
+                                             </graphic>
+                                             <HBox.margin>
+                                                <Insets right="-10.0" top="9.0" />
+                                             </HBox.margin>
+                                          </Button>
                                           <Button fx:id="stop" mnemonicParsing="false">
                                              <graphic>
                                                 <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true">
@@ -200,6 +208,43 @@
                               </LineChart>
                            </center>
                         </BorderPane>
+                        <BorderPane prefHeight="200.0" prefWidth="200.0" styleClass="pane" GridPane.rowIndex="2">
+                           <top>
+                              <HBox prefHeight="55.0" prefWidth="200.0" styleClass="green-bg" BorderPane.alignment="CENTER">
+                                 <children>
+                                    <ImageView fitHeight="150.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@memory-chip.png" />
+                                       </image>
+                                       <HBox.margin>
+                                          <Insets left="20.0" top="17.0" />
+                                       </HBox.margin>
+                                    </ImageView>
+                                    <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Memory Usage">
+                                       <font>
+                                          <Font size="15.0" />
+                                       </font>
+                                       <HBox.margin>
+                                          <Insets left="10.0" top="17.0" />
+                                       </HBox.margin>
+                                    </Text>
+                                 </children>
+                              </HBox>
+                           </top>
+                           <center>
+                              <LineChart fx:id="cpuChart" prefHeight="192.0" prefWidth="439.0" BorderPane.alignment="CENTER">
+                                 <xAxis>
+                                    <NumberAxis fx:id="cpuX" side="BOTTOM" />
+                                 </xAxis>
+                                 <yAxis>
+                                    <NumberAxis fx:id="cpuY" side="LEFT" />
+                                 </yAxis>
+                                 <BorderPane.margin>
+                                    <Insets bottom="10.0" left="10.0" right="10.0" />
+                                 </BorderPane.margin>
+                              </LineChart>
+                           </center>
+                        </BorderPane>
                      </children>
                   </GridPane>
                   <BorderPane prefHeight="200.0" prefWidth="200.0" styleClass="pane" GridPane.hgrow="ALWAYS">
@@ -225,8 +270,25 @@
                            </children>
                         </HBox>
                      </top>
-                     <center>
-                        <TableView fx:id="scheduleTable" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+                     <right>
+                        <HBox prefHeight="319.0" prefWidth="353.0" BorderPane.alignment="CENTER">
+                           <children>
+                              <StackedBarChart fx:id="barChart">
+                                <xAxis>
+                                  <CategoryAxis fx:id="barX" side="BOTTOM" />
+                                </xAxis>
+                                <yAxis>
+                                  <NumberAxis fx:id="barY" side="LEFT" />
+                                </yAxis>
+                                 <HBox.margin>
+                                    <Insets bottom="20.0" right="20.0" />
+                                 </HBox.margin>
+                              </StackedBarChart>
+                           </children>
+                        </HBox>
+                     </right>
+                     <left>
+                        <TableView fx:id="scheduleTable" prefHeight="299.0" prefWidth="282.0" BorderPane.alignment="CENTER">
                            <BorderPane.margin>
                               <Insets bottom="20.0" left="20.0" right="20.0" />
                            </BorderPane.margin>
@@ -237,7 +299,7 @@
                               <TableColumn fx:id="processorCol" prefWidth="89.0" text="Processor" />
                            </columns>
                         </TableView>
-                     </center>
+                     </left>
                   </BorderPane>
                </children>
                <GridPane.margin>
@@ -255,9 +317,9 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane">
+                  <Pane prefHeight="166.0" prefWidth="186.0" styleClass="pane">
                      <children>
-                        <VBox alignment="CENTER" layoutX="8.0" layoutY="8.0" prefHeight="150.0" prefWidth="180.0">
+                        <VBox alignment="CENTER" layoutX="58.0" layoutY="3.0" prefHeight="150.0" prefWidth="180.0">
                            <children>
                               <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="textPrimary" text="Branches Checked">
                                  <font>
@@ -275,7 +337,7 @@
                   </Pane>
                   <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane" GridPane.columnIndex="1">
                      <children>
-                        <VBox alignment="CENTER" layoutX="46.0" layoutY="-17.0" prefHeight="200.0" prefWidth="100.0">
+                        <VBox alignment="CENTER" layoutX="98.0" layoutY="-22.0" prefHeight="200.0" prefWidth="100.0">
                            <children>
                               <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="textPrimary" text="Current Bound">
                                  <font>
@@ -293,7 +355,7 @@
                   </Pane>
                   <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane" GridPane.columnIndex="2">
                      <children>
-                        <VBox alignment="CENTER" layoutX="48.0" layoutY="-17.0" prefHeight="200.0" prefWidth="100.0">
+                        <VBox alignment="CENTER" layoutX="98.0" layoutY="-22.0" prefHeight="200.0" prefWidth="100.0">
                            <children>
                               <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="textPrimary" text="Valid Schedules">
                                  <font>
@@ -311,14 +373,14 @@
                   </Pane>
                   <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane" GridPane.columnIndex="3">
                      <children>
-                        <VBox alignment="CENTER" layoutX="48.0" layoutY="-17.0" prefHeight="200.0" prefWidth="100.0">
+                        <VBox alignment="CENTER" layoutX="98.0" layoutY="-22.0" prefHeight="200.0" prefWidth="100.0">
                            <children>
-                              <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="textPrimary" text="Bound Successful">
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="textPrimary" text="Pruned">
                                  <font>
                                     <Font size="14.0" />
                                  </font>
                               </Text>
-                              <Text fill="#616161" strokeType="OUTSIDE" strokeWidth="0.0" text="0" textAlignment="CENTER">
+                              <Text fx:id="pruned" fill="#616161" strokeType="OUTSIDE" strokeWidth="0.0" text="0" textAlignment="CENTER">
                                  <font>
                                     <Font size="34.0" />
                                  </font>
