Fixed some semantic issues and added help option

--- a/src/main/resources/swiftsolutions/gui/template/style.css
+++ b/src/main/resources/swiftsolutions/gui/template/style.css
@@ -134,4 +134,4 @@
 .table-view > .virtual-flow > .scroll-bar > .increment-button, 
 .table-view > .virtual-flow > .scroll-bar > .decrement-button {
    -fx-opacity: 0;
-}*
+}
