Updated documentation and relative test paths.
Made final fixes.

Color wasn't showing in my command prompt or power shell so I added an
option to remove it. Updated some labels in the GUI and added some comments.

Changed "Valid Schedule" label to "New Optimal Schedules"

Full name graphs.

Full name graphs are now also added to the repository.

--- a/src/main/resources/swiftsolutions/gui/template/GUI.fxml
+++ b/src/main/resources/swiftsolutions/gui/template/GUI.fxml
@@ -355,9 +355,9 @@
                   </Pane>
                   <Pane prefHeight="200.0" prefWidth="200.0" styleClass="pane" GridPane.columnIndex="2">
                      <children>
-                        <VBox alignment="CENTER" layoutX="98.0" layoutY="-22.0" prefHeight="200.0" prefWidth="100.0">
+                        <VBox alignment="CENTER" layoutX="74.0" layoutY="-22.0" prefHeight="200.0" prefWidth="100.0">
                            <children>
-                              <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="textPrimary" text="Valid Schedules">
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="textPrimary" text="New Optimal Schedules">
                                  <font>
                                     <Font size="14.0" />
                                  </font>
